# simd-tutorial

./: CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/: publish-docker.yml
.github/workflows/: publish-docker.yml
docker/: asm_inspect.sh  compile.sh  entrypoint.sh  inspect.sh  install_tsl.sh  run.sh
foundations/: README.md
foundations/include/aggregation/: aggregate_nested_loop.hpp  aggregate_scalar.hpp  aggregate_sse.hpp
simd-tutorial/01-foundations/: README.md
simd-tutorial/01-foundations/include/: preprocessor.hpp  utils.hpp
simd-tutorial/01-foundations/include/aggregation/: sum_avx2.hpp  sum_neon.hpp  sum_nested_loop.hpp  sum_scalar.hpp  sum_sse.hpp
simd-tutorial/01-foundations/include/filter_sum/: filter_sum_avx2.hpp  filter_sum_neon.hpp  filter_sum_scalar.hpp
simd-tutorial/01-foundations/include/group_sum/: group_sum_avx2.hpp  group_sum_neon.hpp  group_sum_scalar.hpp  map.hpp
simd-tutorial/01-foundations/include/nsm_dsm/: filter_sum_dsm_avx2.hpp  filter_sum_nsm_avx2.hpp  table.hpp
simd-tutorial/01-foundations/src/arm/: CMakeLists.txt  filter_sum.cpp  group_sum.cpp  sum.cpp
simd-tutorial/01-foundations/src/x86/: CMakeLists.txt  filter_sum.cpp  group_sum.cpp  nsm_dsm.cpp  sum.cpp
simd-tutorial/02-abstraction/aggregation/: sum_scalar.hpp
simd-tutorial/02-abstraction/filter_sum/: filter_sum_tsl.hpp
simd-tutorial/02-abstraction/include/: utils.hpp
simd-tutorial/02-abstraction/include/aggregation/: sum_avx2.hpp  sum_neon.hpp  sum_scalar.hpp  sum_tsl.hpp  sum_tsl_runtime.hpp
simd-tutorial/02-abstraction/include/filter_sum/: filter_sum_avx2.hpp  filter_sum_neon.hpp  filter_sum_scalar.hpp  filter_sum_tsl.hpp  filter_sum_tsl_runtime.hpp
simd-tutorial/02-abstraction/include/group_sum/: group_sum_avx2.hpp  group_sum_neon.hpp  group_sum_scalar.hpp  group_sum_tsl.hpp  group_sum_tsl_runtime.hpp  map.hpp
simd-tutorial/02-abstraction/include/nsm_dsm/: filter_sum_dsm_avx2.hpp  filter_sum_dsm_nsm_scalar.hpp  filter_sum_dsm_tsl_runtime.hpp  filter_sum_nsm_avx2.hpp  filter_sum_nsm_tsl_runtime.hpp  table.hpp
simd-tutorial/02-abstraction/src/arm/: CMakeLists.txt  filter_sum.cpp  group_sum.cpp  sum.cpp
simd-tutorial/02-abstraction/src/x86/: CMakeLists.txt  filter_sum.cpp  group_sum.cpp  nsm_dsm.cpp  sum.cpp
simd-tutorial/03-advanced-concepts/include/: utils.hpp
simd-tutorial/03-advanced-concepts/include/nsm_dsm/: filter_sum_dsm_scalar.hpp  filter_sum_dsm_tsl.hpp  filter_sum_nsm_bsa_tsl.hpp  filter_sum_nsm_tsl.hpp  table.hpp
simd-tutorial/03-advanced-concepts/src/x86/: CMakeLists.txt  nsm_dsm.cpp
