add_executable(abstraction_aggregate_sum sum.cpp)
target_compile_features(abstraction_aggregate_sum PRIVATE cxx_std_20)
set_target_properties(abstraction_aggregate_sum PROPERTIES
  CXX_STANDARD_REQUIRED ON 
  RUNTIME_OUTPUT_DIRECTORY ${TURORIAL_BIN_ROOT}/02-abstraction
  OUTPUT_NAME aggregate_sum
  INTERPROCEDURAL_OPTIMIZATION_RELEASE TRUE
)
target_include_directories(abstraction_aggregate_sum PRIVATE ${TUTORIAL_INCLUDE_DIRECTORIES_ABSTRACTION})
target_compile_options(abstraction_aggregate_sum PRIVATE -mavx2 -flax-vector-conversions)
target_compile_definitions(abstraction_aggregate_sum PUBLIC TSL_USE_CONCEPTS)

